--- a/pages/blog.html
+++ b/pages/blog.html
@@ -62,7 +62,7 @@ pagination:
     <div class="">
     {% if paginator.previous_page %}
       <a class="" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">
-        <i class="fas fa-chevron-left mr-2"></i><b>Previous</b>
+        <i class="fa fa-chevron-left mr-2"></i><b>Previous</b>
       </a>
     {% endif %}
     </div>
@@ -72,7 +72,7 @@ pagination:
     <div class="">
     {% if paginator.next_page %}
       <a class="" href="{{ paginator.next_page_path | prepend: site.baseurl }}">
-        <b>Next</b><i class="fas fa-chevron-right ml-2"></i>
+        <b>Next</b><i class="fa fa-chevron-right ml-2"></i>
       </a>
     {% endif %}
     </div>
