Change work to case studies

--- a/pages/case-studies.html
+++ b/pages/case-studies.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Our Work
-permalink: /work/
+title: Case studies
+permalink: /case-studies/
 redirect_from:
+  - /work/
   - /work/energyos/
   - /work/maalka/
   - /work/people-power/
