update care package

--- a/pages/join.html
+++ b/pages/join.html
@@ -277,40 +277,35 @@ permalink: /join/
           </li>
 
           <li>
-            Profit-sharing and/or bonus opportunities
+            Opportunities for an economic stake in the company's success
           </li>
 
           <li>
-            Health insurance, including medical, dental, and vision
+            Performance bonuses, referral bonuses, publication bonuses, and public speaking bonuses
           </li>
 
           <li>
-            Life insurance
+            Medical insurance, dental insurance, vision insurance, short-term and long-term disability insurance, life insurance, dependent care FSA, healthcare FSA, and health savings account
           </li>
 
           <li>
-            Short-term and long-term disability insurance
+            401(k) match at 10% of your salary
           </li>
 
           <li>
-            Flexible spending accounts for medical and dependent care
+            Flexible paid-time-off policy (minimum of 29 days), which covers any type of leave (such as holiday, sick, and vacation) that you need or want to take
           </li>
 
           <li>
-            401k match at 10% of your salary
+            Minimum of 9 weeks paid time off for all eligible new birth, adoption, or foster parents
           </li>
 
           <li>
-            Unlimited paid time-off policy
+            Annual $2,000 professional development allowance
           </li>
 
           <li>
-            $2,000 continuing education allowance, including conference events
-          </li>
-
-          <li>
-            Incentives for living in a HUBZone area, including relocation assistance
-            and a monthly stipend to help offset the cost of rent or mortgage
+            Annual $750 technology stipend
           </li>
 
           <li>
@@ -318,12 +313,11 @@ permalink: /join/
           </li>
 
           <li>
-            Remote-friendly work environment
+            Incentives for living in a HUBZone area (https://maps.certify.sba.gov/hubzone/map), including relocation assistance and a monthly stipend to help offset the cost of rent or mortgage
           </li>
 
           <li>
-            Time to focus on activities such as learning &amp; development,
-            open-source projects, and community outreach
+            Remote-friendly work environment
           </li>
 
           <li>
