--- a/pages/join.html
+++ b/pages/join.html
@@ -305,7 +305,7 @@ permalink: /join/
           </li>
 
           <li>
-            Annual $750 technology stipend
+            Annual budget of up to $750 for tech-related purchases
           </li>
 
           <li>
