--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,15 +7,13 @@ redirect_from:
   - /alliances/
 ---
 
-{% include page_header.html
-  header_title = 'Let&apos;s Deliver Something Great'
-  header_class = 'page-header-2'
+{% include hero_banner.html
+  hero_content = 'We’d love to work with you on turning your most bold idea or complex problem into a public success story.'
 %}
 
 <div class="hire-us text">
   <p>
-    <strong>We'd love to work with you on turning your most bold idea or complex problem
-    into a public success story.</strong> Please describe what you're looking
+    Please describe what you're looking
     to do, and we'll follow up in one business day. If you prefer, you can email
     us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
   </p>
