--- a/pages/culture.html
+++ b/pages/culture.html
@@ -1,16 +1,11 @@
 ---
 layout: default
-title: Our Culture
+title: Our culture
 permalink: /culture/
 ---
 
-{% capture header_content %}
-  Our values are the core of our culture, informing our thoughts, words, and actions.
-{% endcapture %}
-
-{% include page_header.html
-  header_content_class = 'page-header-content-1'
-  header_content = header_content
+{% include hero_banner.html
+  hero_content = "Our values are the core of our culture, informing our thoughts, words, and actions."
 %}
 
 <div class="our-culture">
