--- a/pages/services.html
+++ b/pages/services.html
@@ -1,12 +1,11 @@
 ---
 layout: default
-title: Our Services
+title: Our services
 permalink: /services/
 ---
 
-{% include page_header.html
-  header_content_class = 'page-header-content-1'
-  header_content = 'A lot goes into making you a digital-first agency.'
+{% include hero_banner.html
+  hero_content = 'A lot goes into making you a digital-first agency.'
 %}
 
 <div class="our-services">
