--- a/pages/team.html
+++ b/pages/team.html
@@ -5,11 +5,9 @@ permalink: /team/
 redirect_from: /about/
 ---
 
-{% include page_header.html
-  header_title = 'We&apos;re Skylight!'
-  header_class = 'page-header-3'
-  header_content_class = 'page-header-content-1'
-  header_content = 'Our mission is to make government work&nbsp;in&nbsp;a&nbsp;digital&nbsp;world.'
+{% include hero_banner.html
+  hero_title = 'We&apos;re Skylight!'
+  hero_content = 'Our mission is to make government work&nbsp;in&nbsp;a&nbsp;digital&nbsp;world.'
 %}
 
 <div class="about-us">
