Update max-width of hero banner

--- a/pages/team.html
+++ b/pages/team.html
@@ -7,7 +7,7 @@ redirect_from: /about/
 
 {% include hero_banner.html
   hero_title = 'We&apos;re Skylight!'
-  hero_content = 'Our mission is to make government work&nbsp;in&nbsp;a&nbsp;digital&nbsp;world.'
+  hero_content = 'Our mission is to make government work in a digital world.'
 %}
 
 <div class="about-us">
