Add hero bg setup

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,7 @@ redirect_from:
 
 {% include hero_banner.html
   hero_content = 'We’d love to work with you on turning your most bold idea or complex problem into a public success story.'
+  image = ""
 %}
 
 <div class="hire-us text">
