--- a/pages/join.html
+++ b/pages/join.html
@@ -313,7 +313,7 @@ permalink: /join/
           </li>
 
           <li>
-            Incentives for living in a HUBZone area (https://maps.certify.sba.gov/hubzone/map), including relocation assistance and a monthly stipend to help offset the cost of rent or mortgage
+            Incentives for living in a <a href="https://maps.certify.sba.gov/hubzone/map">HUBZone area</a>, including relocation assistance and a monthly stipend to help offset the cost of rent or mortgage
           </li>
 
           <li>
