--- a/_service_areas/ditap-apply.html
+++ b/_service_areas/ditap-apply.html
@@ -1,16 +1,15 @@
 ---
 layout: default
-title: Submit Your Application
+title: Submit your application
 permalink: /services/ditap/apply/
 ---
 
-{% include page_header.html
-  header_class = 'page-header-2'
+{% include hero_banner.html
+  hero_content = "You're one step closer to mastering the art of digital acquisition!"
 %}
 
 <div class="ditap-apply">
   <p>
-    <strong>You're one step closer to mastering the art of digital acquisition!</strong>
     Once we receive your application, our team will review it and follow up within 1&ndash;2
     business days to ask you a few questions. We want you to have the best learning
     experience possible, so it's important to determine whether you're a good fit for
