Change to consistent chevron arrow

--- a/_service_areas/ditap-apply.html
+++ b/_service_areas/ditap-apply.html
@@ -73,5 +73,5 @@ permalink: /services/ditap/apply/
   text_css_class = "page-subfooter-text-col"
   cta_path = "#"
   cta = "Email Us"
-  icon_css_class = "fa fa-arrow-right"
+  icon_css_class = "fa fa-chevron-right"
 %}
