--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Home
 
       <a class="btn btn-warning btn-lg text-dark" href="/hire-us/" role="button">
         <span class="font-bold">Let's talk</span>
-        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+        <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
     </div>
   </section>
