--- a/pages/blog.html
+++ b/pages/blog.html
@@ -44,8 +44,7 @@ pagination:
               <p class="blog-post-text">{{item.excerpt}}</p>
               <div class="blog-post-footer">
                 <a href="{{item.permalink}}" tabindex="0">
-                  <span>Read more</span>
-                  <i class="fa fa-2x fa-long-arrow-right" aria-hidden="true"></i>
+                  <span>Read more</span><i class="fa fa-chevron-right" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
