Update hero banner bg colors

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -8,6 +8,7 @@ hero_content: Help us change the way government works.
 
 {% include hero_banner.html
   hero_content = "Help us change the way government works."
+  color = "green"
 %}
 
 <div class="container">
