--- a/pages/services.html
+++ b/pages/services.html
@@ -6,6 +6,7 @@ permalink: /services/
 
 {% include hero_banner.html
   hero_content = 'A lot goes into making you a digital-first agency.'
+  color = 'blue'
 %}
 
 <div class="our-services">
