--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,6 +10,8 @@ redirect_from:
 {% include hero_banner.html
   hero_content = 'We’d love to work with you on turning your most bold idea or complex problem into a public success story.'
   image = ""
+  color = "yellow"
+  text = "dark"
 %}
 
 <div class="hire-us text">
