--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: U.S. Navy
 title: Better decisions through protosketching
 permalink: /work/us-navy-protosketching/
-image: /img/projects/us_navy_protosketching/protosketching.png
-image_description: A website being prototyped on a laptop.
+image: /img/projects/us_navy_protosketching/protosketching.svg
+image_description: Two people using brushes to draw a wireframe.
 feature_image:
 feature_image_description:
 order: 120
