--- a/_projects/va_api_developer_outreach.html
+++ b/_projects/va_api_developer_outreach.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Veterans Affairs
 title: Expanding the adoption of APIs
 permalink: /work/va-api-developer-outreach/
-image: /img/projects/va_api_developer_outreach/api-developer-outreach.png
-image_description: A megaphone enclosed within API computing symbols.
+image: /img/projects/va_api_developer_outreach/api-developer-outreach.svg
+image_description: Someone using a megaphone to spread the word about APIs.
 feature_image:
 feature_image_description:
 order: 90
