--- a/_projects/va_api_governance_research.html
+++ b/_projects/va_api_governance_research.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Veterans Affairs
 title: Managing APIs successfully at scale
 permalink: /work/va-api-governance-research/
-image: /img/projects/va_api_governance_research/api-governance.png
-image_description: An API governance concept.
+image: /img/projects/va_api_governance_research/api-governance.svg
+image_description: A forklift operator lifting API-labeled containers.
 feature_image:
 feature_image_description:
 order: 75
