--- a/_projects/va_api_landscape_analysis.html
+++ b/_projects/va_api_landscape_analysis.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Veterans Affairs
 title: Identifying valuable datasets for turning into APIs
 permalink: /work/va-api-landscape-analysis/
-image: /img/projects/va_api_landscape_analysis/api-magnifier.png
-image_description: A software spider searching for APIs.
+image: /img/projects/va_api_landscape_analysis/api-machine.svg
+image_description: Two people operating a machine that turns data into APIs.
 feature_image:
 feature_image_description:
 order: 85
