--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Adopta.Agency
 title: Making public datasets more accessible
 permalink: /work/adopta-agency/
-image: /img/projects/adopta-agency/adopta-agency.png
-image_description: A government building enclosed within API computing symbols.
+image: /img/projects/adopta-agency/api-launcher.svg
+image_description: A person using a catapult to launch a boulder enscribed with the acronym API.
 feature_image:
 feature_image_description:
 order: 160
