--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Digital Transformation Framework
 title: Digitally transforming government
 permalink: /work/digital-transformation-framework/
-image: /img/projects/digital_transformation_framework/digital-transformation-framework.png
-image_description: A diagram image showing various digital transformation dimensions.
+image: /img/projects/digital_transformation_framework/digital-government-transformation.svg
+image_description: Two people using old computers sitting across from someone using a modern computer.
 feature_image:
 feature_image_description:
 order: 130
@@ -29,8 +29,8 @@ news_posts:
     url: https://govfresh.com/2017/01/transforming-u-s-government-services-digital-world/
   - title: Transforming digital government
     url: https://govfresh.com/2016/12/transforming-digital-government/
-project_url:
-project_cta:
+project_url: https://github.com/18F/transformation-services/blob/master/18F-Transformation-Terraform-DECK.pdf
+project_cta: See the doc
 source_code_url:
 ---
 
