--- a/pages/careers.html
+++ b/pages/careers.html
@@ -40,29 +40,29 @@ hero_content: Help us change the way government works.
 
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
-            <img src="{{ site.baseurl }}/img/people/lesley-evans.jpg" alt="Lesley Evans">
+            <img src="{{ site.baseurl }}/img/people/shashank-khandelwal.jpg" alt="Shashank Khandelwal">
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
-            <p class=""><i><b>Name,</b> Title of role</i></p>
+            <p class=""><i><b>Shashank Khandelwal,</b> VP for Defense Services</i></p>
           </div>
         </div>
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
-            <img src="{{ site.baseurl }}/img/people/lesley-evans.jpg" alt="Lesley Evans">
+            <img src="{{ site.baseurl }}/img/people/lesley-evans.jpg" alt="Charlye Delgado">
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
-            <p class=""><i><b>Name,</b> Title of role</i></p>
+            <p class=""><i><b>Charlye Delgado,</b> UX Designer</i></p>
           </div>
         </div>
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
-            <img src="{{ site.baseurl }}/img/people/lesley-evans.jpg" alt="Lesley Evans">
+            <img src="{{ site.baseurl }}/img/people/laura-vlassarev.jpg" alt="Laura Vlassarev">
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
-            <p class=""><i><b>Name,</b> Title of role</i></p>
+            <p class=""><i><b>Laura Vlassarev,</b> UX Designer</i></p>
           </div>
         </div>
 
