Update join form banner to green

--- a/pages/join_form.html
+++ b/pages/join_form.html
@@ -6,8 +6,7 @@ permalink: /join-form/
 
 {% include hero_banner.html
   image = ""
-  color = "yellow"
-  text = "dark"
+  color = "green"
 %}
 
 <div class="hire-us text">
