--- a/pages/case-studies.html
+++ b/pages/case-studies.html
@@ -56,8 +56,7 @@ pagination:
             </div>
             <div class="project-footer">
               <a href="{{item.permalink}}" tabindex="0">
-                <span>Read more</span>
-                <i class="fa fa-2x fa-long-arrow-right" aria-hidden="true"></i>
+                <span>Read more</span><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </div>
           </div>
