--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: 18F Consulting
 title: Helping agencies achieve digital mastery
 permalink: /work/18f-consulting/
-image: /img/projects/18f_consulting/18f-consulting.png
-image_description: The logo of 18F Consulting.
+image: /img/projects/18f_consulting/digital-mastery.svg
+image_description: Quartet playing instruments with digital symbols coming off as sound waves.
 feature_image:
 feature_image_description:
 order: 140
