--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Digital Acquisition Accelerator
 title: Developing more digital acquisition professionals
 permalink: /work/digital-acquisition-accelerator/
-image: /img/projects/digital_acquisition_accelerator/speedometer.png
-image_description: A speedometer.
+image: /img/projects/digital_acquisition_accelerator/digital-acquisition-accelerator.svg
+image_description: People engaging in conversation about digital acquisition subjects.
 feature_image:
 feature_image_description:
 order: 150
