update join page

--- a/pages/join.html
+++ b/pages/join.html
@@ -289,7 +289,7 @@ permalink: /join/
           </li>
 
           <li>
-            401(k) match at 10% of your salary
+            Dollar-for-dollar 401(k) match up to 10% of your salary
           </li>
 
           <li>
